--- a/bbcode.css
+++ b/bbcode.css
@@ -1,3 +1,4 @@
+/*** START BBCODE GALLERY ***/
 .gal_line {
   margin-bottom: 5px;
   margin-right: -10px;
@@ -8,7 +9,7 @@
   height: 100%;
   cursor: pointer;
 }
-.gal_line .gal_picked {
+.gal_picked {
   opacity: 0.2;
   cursor: auto;
   -webkit-transition-duration: 0.5s;
@@ -20,3 +21,4 @@
 .gal_viewer div {
   position: absolute;
 }
+/*** END BBCODE GALLERY ***/
