--- a/bbcode.css
+++ b/bbcode.css
@@ -9,7 +9,7 @@
   height: 100%;
   cursor: pointer;
 }
-.gal_picked {
+.gal_line .gal_picked {
   opacity: 0.2;
   cursor: auto;
   -webkit-transition-duration: 0.5s;
