--- a/bbcode.css
+++ b/bbcode.css
@@ -41,7 +41,7 @@ h3.title3{
   margin:	30px 0 0 -10px;
   padding-left:	24px;
   background-image: url(http://www.biloucorp.com/BCW/Joke/lX.png);
-  Background-repeat: no-repeat;
+  background-repeat: no-repeat;
 }
 h4.title4{
   font-size:	14px;
